Todos/k8s/eks/ingress-nip.generated.yaml
# Generated by 03-ingress-nip.sh — do not edit by hand. Re-run the script to refresh.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-ingress
  namespace: togglemaster
spec:
  ingressClassName: nginx
  rules:
    - host: auth.3.227.78.185.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
    - host: flags.3.227.78.185.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 8002
    - host: targeting.3.227.78.185.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003
    - host: eval.3.227.78.185.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004
    - host: analytics.3.227.78.185.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 8005
